--- a/_config.yml
+++ b/_config.yml
@@ -212,9 +212,9 @@ collections:
   # teaching:
   #   output: true
   #   permalink: /:collection/:path/
-  education:
-    output: true
-    permalink: /:collection/:path/
+  # education:
+  #   output: true
+  #   permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
