--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Yuan Pu"
   pronouns         : "she/her" # example: "she/her"  
-  bio              : "Post-graduate research assistant at Yale School of Medicine"
+  bio              : "Postgraduate associate at Yale School of Medicine"
   location         : # "New Haven, CT"
   employer         : # "Yale School of Medicine"
   uri              : # URL
