--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification : "tlQ1HJaMoYZx2ofHVL6YysN2HEJUNtJMWjPJs-8cJ2Y"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
