--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : # "New Haven, CT"
   employer         : # "Yale School of Medicine"
   uri              : # URL
-  email            : "yuan.pu@yale.edu" 
+  email            : "yuan.pu@duke.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
